# linkwiz

./: .gitignore  Cargo.toml  Linkwiz.desktop  README.md  config.toml  pyproject.toml  setup.iss  win.avif
linkwiz/: __main__.py  app.py  browser.py  browsers.py  cli.py  config.py  core.py  gui.py  install.py  launch.py  linux_browsers.py  match.py  mimeapps.py  open.py  types.py  win_browsers.py
linkwiz/installation/: linux_install.py  win_install.py
pacman/: .gitignore  PKGBUILD
src/: config.rs  core.rs  launch.rs  lib.rs  main.rs  matching.rs  utils.rs
src/browsers/: linux.rs  mod.rs  windows.rs
src/gui/: error.rs  mod.rs  selector.rs
