[package]
name = "linkwiz-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.19"
wildmatch = "2.3.4"
egui = "0.28.1"
eframe = "0.28.1"
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[profile.dev]
debug = 1

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
